--- a/html/Comunidad.html
+++ b/html/Comunidad.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link" href="../html/Conecta.html">Conectar Viajes</a>
+                        <a class="nav-link" href="#">Conectar Viajes</a>
                     </li>  
                       <li class="nav-item">
                             <a class="nav-link" href="../html/Comunidad.html">Comunidad</a>
