--- a/html/misPublicaciones.html
+++ b/html/misPublicaciones.html
@@ -142,6 +142,103 @@
         </div>
     </div>
 
+
+<!-- Footer -->
+<footer class="text-center text-lg-start text-white">
+
+    <!-- Section: Social media -->
+    <section class="d-flex justify-content-between p-4" id="FooterRibbon">
+      <!-- Left -->
+      <div class="me-5">
+        <p>Conecta con nosotras en redes sociales:</p>
+      </div>
+      <!-- Left -->
+
+      <!-- Iconos para redes sociales -->
+      <div>
+        <a href="" class="text-white me-4">
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="bi bi-whatsapp"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="bi bi-linkedin"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="bi bi-instagram"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="bi bi-twitter-x"></i>
+        </a>
+      </div>
+      <!-- Sección derecha -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section>
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold">FemTrek</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" id="FooterLine"/>
+            <p>
+              De mujeres para mujeres. Generemos una comunidad de apoyo para no restringirnos de una vida plena.
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Carreras</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" id="FooterLine"/>
+            <p>
+              <a href="#!" class="text-white">Unete a nuestro equipo</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">carreras@femtrek.com</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Media</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" id="FooterLine"/>
+                <p>Para entrevistas y colaboraciones</p>
+             <p>empresarial@femtrek.com prensa@femtrek.com</p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Contacto</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" id="FooterLine"/>
+            <p><i class="fas fa-home mr-3"></i> Plaza de la constitución, Col. Centro. Ciudad de México, México</p>
+            <p><i class="fas fa-phone mr-3"></i> contacto@femtrek.com</p>
+            <p><i class="fas fa-print mr-3"></i> +52 55 1234 1234</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+
+    <!-- Copyright -->
+    <div class="text-center p-3" id="Copyright">
+      © 2024 Copyright: <a class="text-white" href="../html/About-Us.html"> Team Jacarandas</a>
+    </div>
+
+  </footer>
+  <!-- Footer -->
+
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
