Cambios menores para la presentación

--- a/html/Quizz.html
+++ b/html/Quizz.html
@@ -125,8 +125,8 @@
         <div class="col-md-4 my-auto">
             <img src="../public/Imagen quizz.webp" class="img-fluid" alt="Imagen para el quizz">
             <div class="button-container">
-                <button type="submit" class="btn btn-save">Guardar</button>
-                <button type="button" class="btn btn-later">En otro momento</button>
+                <button type="submit" class="btn btn-save" href="../html/Mi-Perfil.html">Guardar</button>
+                <button type="button" class="btn btn-later" href="../html/Configurar-Perfil.html">En otro momento</button>
             </div>
            
         </div>
