--- a/html/Quizz.html
+++ b/html/Quizz.html
@@ -68,9 +68,9 @@
         <!-- Columna izquierda -->
         <div class="col-md-4 d-flex flex-column gap-3">
             <div class="card h-100"> 
-             <div class="card-body d-flex flex-column">
+             <div class="card-body d-flex flex-column" >
                 <h3 class="card-title mt-auto"> Países de interés </h3> 
-                <select class="form-select mt-auto" aria-label="Selecciona un país">
+                <select class="form-select mt-auto" id="pais" aria-label="Selecciona un país">
                     <option selected>Selecciona un país</option>
                     <option value="argentina">Argentina</option>
                     <option value="bolivia">Bolivia</option>
@@ -98,9 +98,9 @@
     <br>
     <br>
             <div class="card h-100">
-                <div class="card-body d-flex flex-column">
+                <div class="card-body d-flex flex-column" >
                     <h3 class="card-title mb-auto"> ¿Qué es lo que te emociona de viajar? </h3>
-                    <textarea class="form-control mt-3" rows="3" placeholder="De viajar me emociona..."></textarea>
+                    <textarea class="form-control mt-3" rows="3" id="emociona" placeholder="De viajar me emociona..."></textarea>
                 </div>
             </div>
             <br>
@@ -108,8 +108,8 @@
             <div class="card h-100">
                 <div class="card-body d-flex flex-column">
                     <h3 class="card-title mt-auto"> ¿Qué tipo de viajera eres? </h3>
-                    <select class="form-select mt-auto" aria-label="Yo prefiero...">
-                        <option selected>Yo soy...</option>
+                    <select class="form-select mt-auto" id="viajera" aria-label="Yo prefiero...">
+                        <option selected >Yo soy...</option>
                         <option value="La planificadora">La planificadora</option>
                         <option value="La fotógrafa">La fotógrafa</option>
                         <option value="La foodie">La foodie</option>
@@ -125,7 +125,7 @@
         <div class="col-md-4 my-auto">
             <img src="../public/Imagen quizz.webp" class="img-fluid" alt="Imagen para el quizz">
             <div class="button-container">
-                <button type="submit" class="btn btn-save" href="../html/Mi-Perfil.html">Guardar</button>
+                <button type="submit" onclick="guardaquizz()" class="btn btn-save" href="../html/Mi-Perfil.html">Guardar</button>
                 <button type="button" class="btn btn-later" href="../html/Configurar-Perfil.html">En otro momento</button>
             </div>
            
@@ -137,8 +137,8 @@
             <div class="card h-100">
                 <div class="card-body  d-flex flex-column">
                     <h3 class="card-title mt-auto"> Prefieres viajar a: </h3>
-                    <select class="form-select mt-auto" aria-label="Yo prefiero...">
-                        <option selected>Yo prefiero...</option>
+                    <select class="form-select mt-auto"id="prefiero" aria-label="Yo prefiero..."><!--el id debe ir aqui-->
+                        <option selected >Yo prefiero...</option>
                         <option value="Ciudades">Ciudades grandes y llenas de actividad</option>
                         <option value="Naturaleza">Lugares tranquilos y llenos de naturaleza</option>
                     </select>
@@ -149,7 +149,7 @@
             <div class="card h-100">
                 <div class="card-body  d-flex flex-column">
                     <h3 class="card-title mb-auto"> ¿Qué es lo que más disfrutas cuando viajas? </h3>
-                    <textarea class="form-control mt-3" rows="3" placeholder="Yo disfruto conocer la gastronomía del lugar,..., etc"></textarea>
+                    <textarea class="form-control mt-3" rows="3" id="disfrutar" placeholder="Yo disfruto conocer la gastronomía del lugar,..., etc"></textarea>
                 </div>
             </div>
             <br>
@@ -157,8 +157,8 @@
             <div class="card h-100">
                 <div class="card-body  d-flex flex-column">
                     <h3 class="card-title mt-auto"> Época favorita para viajar </h3>
-                    <select class="form-select mt-auto" aria-label="Mi época favorita paar viajar...">
-                        <option selected>Yo prefiero viajar en...</option>
+                    <select class="form-select mt-auto" id="temporada" aria-label="Mi época favorita paar viajar..."><!--el id debe ir aqui-->
+                        <option selected >Yo prefiero viajar en...</option>
                         <option value="Invierno">Invierno</option>
                         <option value="Primavera">Primavera</option>
                         <option value="Verano">Verano</option>
@@ -270,7 +270,7 @@
   </footer>
 
 
-
+  <script src="/js/quizz.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
