--- a/html/Registro.html
+++ b/html/Registro.html
@@ -13,6 +13,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<script src="https://kit.fontawesome.com/060659d31d.js" crossorigin="anonymous"></script>
+
     <!--Link a nuestro archivo de estilos-->
     <link rel="stylesheet" href="../css/Registro.css">
 
@@ -162,9 +166,9 @@
         <option value="DOM">República Dominicana</option>
         <option value="SLA">Santa Lucía</option>
         <option value="SKN">Saint Kitts y Nevis</option>
-        <option value="SVG">San Vicente y las Granadinas></option>
-        <option value="SUR">Suriname></option>
-        <option value="TYT">Trinidad y Tobago></option>
+        <option value="SVG">San Vicente y las Granadinas</option>
+        <option value="SUR">Suriname</option>
+        <option value="TYT">Trinidad y Tobago</option>
         <option value="URU">Uruguay</option>
         <option value="VEN">Venezuela</option>
       </select>
