--- a/html/Comunidad.html
+++ b/html/Comunidad.html
@@ -226,7 +226,7 @@
                                 </button>
                             </div>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <button class="btn btn-outline-primary btn-sm" type="button-1" id = "bt-Borr" onclick="addBorrador()">
+                                <button class="btn btn-outline-primary btn-sm" type="button" id = "bt-Borr" onclick="addBorrador()">
                                     <i class="bi bi-archive"></i>
                                     Borrador</button>
                                 <button class="btn btn-outline-primary btn-sm" type="button-1" id="bt-Des" onclick="limpiarFormulario()">
@@ -357,8 +357,9 @@
 
     <script src="../js/comunidadPaises.js"></script>
     <script src="../js/Comunidad-Tarjetas.js"></script>
-    <!-- <script src = "./js/borradores.js"></script>  -->
-     <script src = "../js/publicacionesLocal.js"></script>
+    <script src = "../js/publicacionesLocal.js"></script>
+
+    <script src = "../js/borradores.js"></script> 
     <script src="../js/Comunidad-Publicaciones.js"></script>
 </body>
 
