--- a/html/Iniciar-Sesion.html
+++ b/html/Iniciar-Sesion.html
@@ -60,13 +60,20 @@
   <div class="container">
     <div class="row">
         <div class="col-sm" id="left">
-          <img id="logodos" src="../public/insumos/Logotipo.png" class="img-fluid centered-image" alt="Logo FemTrek">
+          <img id="img-woman" src="../public/insumos/login-mujer-latina.png" class="img-fluid centered-image" alt="Imagen de mujer">
         </div>
 
         <!--Saludo-->
         <div class="col-sm" id="right">
-          <h1 id="saludo">¡Bienvenida!</h1>
-          <div>
+          <br>
+          <img id="welcome" src="../public/insumos/login-Bienvenida.png" class="img-fluid centered-image" alt="Bienvenida">
+          <h3 id="aventura">Aquí comienza tu aventura</h3>        
+            <br>
+
+            <!-- Mensajes de error -->
+            <div id="warnings" class="text-danger"></div>
+
+            <br>
 
           <!-- Formulario de inicio de sesión-->
           <form id="inicioses">
@@ -80,16 +87,16 @@
             <!-- Password input -->
             <div class="mb-4">
               <label class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="passwords" name="txt_password">
+              <input type="password" class="form-control" id="userPassword" name="txt_password">
             </div>
 
             <!-- Submit button -->
             <div class="col d-flex justify-content-center">
-              <a href="../html/Mi-Perfil.html" id="boton" class="btn btn-success" onclick="acceso()">Ingresar</a>
+              <button type="submit" class="btn btn-success" >Ingresar</button>
           </div>
           <br>
             <br>
-          
+            
             <!-- Forgotten password -->
             <div class="row mb-4">
               <div class="col d-flex justify-content-center">
