mi perfil:agrego boton seguir y modifico el de publicar. quizz: redirección onclick a config.perfil. config. perfil:agrego campo descripción. registro: cambio msj error en campo nombre y apellidos

--- a/html/Configurar-Perfil.html
+++ b/html/Configurar-Perfil.html
@@ -83,11 +83,14 @@
             <label for="ubicacion">Estoy en:</label>
             <input type="text" id="ubicacion" name="ubicacion">
             <br>
-            <label for="destino">Próximo destino:</label>
+            <label for="destino">Países de interés:</label>
             <input type="text" id="destino" name="destino">
             <br>
             <label for="intereses">Intereses:</label>
             <input type="text" id="intereses" name="intereses">
+            <br>
+            <label for="intereses">Descripción:</label>
+            <input type="text" id="description" name="description">
             <br>
              <!--guardar cambios-->
             <button type="submit">Guardar cambios</button>
