--- a/html/Mi-Perfil.html
+++ b/html/Mi-Perfil.html
@@ -98,6 +98,7 @@
                   </ul>  
 
                   <p id="userDesc">"Me gustan las jícamas y los elotes con chile del que no pica"</p>
+                  <button type="button" class="btn btn-center">Seguir</button>
               </div>
               
               <!--Carrousel de preferencias-->
@@ -154,7 +155,7 @@
           </select>
           <!-- Subir publicaciones -->
           <div class="add-post mt-3">
-              <button id="post-btn" type="button" class="btn btn-primary me-2 d-flex align-items-center" onclick="addPost()" alt="Button to post" class="me-2">
+              <button id="post-btn" type="button" class="btn btn-primary" onclick="addPost()" alt="Button to post" class="me-2">
                   Publicar
               </button>
           </div>
