--- a/html/Quizz.html
+++ b/html/Quizz.html
@@ -126,7 +126,7 @@
             <img src="../public/Imagen quizz.webp" class="img-fluid" alt="Imagen para el quizz">
             <div class="button-container">
                 <button type="submit" onclick="guardaquizz()" class="btn btn-save" href="../html/Mi-Perfil.html">Guardar</button>
-                <button type="button" class="btn btn-later" href="../html/Configurar-Perfil.html">En otro momento</button>
+                <button type="button" class="btn btn-later" onclick="window.location.href='../html/Configurar-Perfil.html'">En otro momento</button>
             </div>
            
         </div>
