--- a/html/Quizz.html
+++ b/html/Quizz.html
@@ -125,8 +125,9 @@
         <div class="col-md-4 my-auto">
             <img src="../public/Imagen quizz.webp" class="img-fluid" alt="Imagen para el quizz">
             <div class="button-container">
-                <button type="submit" onclick="guardaquizz()" class="btn btn-save" href="../html/Mi-Perfil.html">Guardar</button>
-                <button type="button" class="btn btn-later" href="../html/Configurar-Perfil.html">En otro momento</button>
+                <button type="button" class="btn btn-later" href="/html/Configurar-Perfil.html">En otro momento</button>
+                <button type="submit"  onclick="guardaquizz()" class="btn btn-save" href="../html/Mi-Perfil.html">Guardar</button>
+                <!-- onclick="guardaquizz()" -->
             </div>
            
         </div>
@@ -173,6 +174,8 @@
 <br>
 <br>
 <br>
+
+<h3 id="guardaquizz" class="text-center"></h3>
 
 <!-- Footer -->
 <footer class="text-center text-lg-start text-white">
